# PromptLauncher

./: .env.example  .eslintrc.cjs  AGENTS.md  CLAUDE.md  CODEX.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json
.github/workflows/: ci.yml  release.yml
docs/: 01-product-requirements.md  changelog.md  development-guide.md  index.md  user-manual.md
docs/ai/: coding-rules.md  context-map.md  review-checklist.md
docs/architecture/: 02-technical-architecture.md  component-tree.md  overview.md
docs/reference/: changelog.md  user-manual.md
docs/specs/: 03-execution-plan.md
docs/testing/: tdd-guide.md  test-data.md  testing-strategy.md
docs/todos/: README.md  flex-window-size.md  improvement-analysis.md
scripts/: eslint-typescript-parser.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard_commands.rs  group_commands.rs  import_export_commands.rs  mod.rs  prompt_commands.rs  setting_commands.rs  window_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/errors/: app_error.rs
src-tauri/src/models/: group.rs  mod.rs  prompt.rs  setting.rs  tag.rs  usage_log.rs
src-tauri/src/services/: clipboard_service.rs  group_service.rs  mod.rs  platform_service.rs  prompt_service.rs  search_service.rs  setting_service.rs  shortcut_service.rs  tray_service.rs  window_service.rs
src-tauri/src/utils/: mod.rs  path.rs  time.rs
src/app/: App.tsx  (+1 more)
tests/: conftest.py
(+54 files in other folders)
